--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
       <div class="container">
         <div class="grid-wrapper">
           <div class="grid-box hpyclients">
-            <h1>270+</h1>
-            <h2>Happy Clients</h2>
+            <h1>Our goal is :</h1>
+            <h2>Giving out clients more than they expect</h2>
           </div>
           <div class="grid-box prjcompleted">
             <h1>300+</h1>
-            <h2>Projects Completed</h2>
+            <h2>Individual Projects Completed</h2>
           </div>
           <div class="grid-box runningprj">
             <h1>11+</h1>
@@ -306,7 +306,7 @@
         <button class="ctn-btn"><a href="https://t.me/joinchat/SR7UBBbwC7V8Vp8EmEmQSA">Join Us @Telegram</a></li></button>
       </div>
     </secton>
-  <!--Alan--
+  
     <script type="text/javascript"
     src="https://studio.alan.app/web/lib/alan_lib.js"></script>
   <script>
@@ -325,7 +325,7 @@
        },
        rootEl: document.getElementById("alan-btn"),
      });
-</script> -->
+</script>
     <!-- Footer -->
     <section class="footer">
       <div class="grid-wrapper">
