--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team1.png" alt="" />
           <h1>Priyadarshan Ghosh</h1>
-          <h2>CTO & Founder</h2>
+          <h2>CTO & Co-Founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/priyadarshan.ghosh.9/"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Priyadarshan2000"><i class="fa fa-github"></a></li></i>
@@ -214,7 +214,7 @@
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team2.png" alt="" />
           <h1>Rajarshi Dutta</h1>
-          <h2>CAO & Founder</h2>
+          <h2>CAO & Co-Founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/rajarshi.dutta.503"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Rajarshi2001-dutta"><i class="fa fa-github"></a></li></i>
@@ -224,7 +224,7 @@
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team3.png" alt="" />
           <h1>Arnab Ray</h1>
-          <h2>CEO & Founder</h2>
+          <h2>CEO & Co-Founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/profile.php?id=100007290316768"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Arnab11917676"><i class="fa fa-github"></a></li></i>
@@ -234,7 +234,7 @@
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team4.png" alt="" />
           <h1>Rohit Roy</h1>
-          <h2>COO & Founder</h2>
+          <h2>COO & Co-Founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/Rohit0906roy"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Roy009"><i class="fa fa-github"></a></li></i>
