--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <a href="https://github.com/Arnab11917676"><i class="fa fa-github"></a></li></i>
             <a href="https://www.linkedin.com/in/arnab-ray-682111192/"><i class="fa fa-linkedin"></a></li></i>
           </div>
-    
+</div>
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/supriyo.jpeg" alt="" />
           <h1>Supriyo Saha</h1>
