--- a/index.html
+++ b/index.html
@@ -204,27 +204,18 @@
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team1.png" alt="" />
           <h1>Priyadarshan Ghosh</h1>
-          <h2>CTO & Co-Founder</h2>
+          <h2>CTO & Co-founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/priyadarshan.ghosh.9/"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Priyadarshan2000"><i class="fa fa-github"></a></li></i>
            <a href="https://www.linkedin.com/in/priyadarshan-ghosh-0a6274190/"><i class="fa fa-linkedin"></a></li></i>
           </div>
         </div>
-        <div class="team-mem" data-aos="zoom-in">
-          <img src="./images/team2.png" alt="" />
-          <h1>Rajarshi Dutta</h1>
-          <h2>CAO & Co-Founder</h2>
-          <div class="social-profiles">
-            <a href="https://www.facebook.com/rajarshi.dutta.503"><i class="fa fa-facebook"></a></li></i>
-            <a href="https://github.com/Rajarshi2001-dutta"><i class="fa fa-github"></a></li></i>
-           <a href="https://www.linkedin.com/in/rajarshi-dutta-192a59168/"><i class="fa fa-linkedin"></a></li></i>
-          </div>
-        </div>
+    
         <div class="team-mem" data-aos="zoom-in">
           <img src="./images/team3.png" alt="" />
           <h1>Arnab Ray</h1>
-          <h2>CEO & Co-Founder</h2>
+          <h2>CEO & Co-founder</h2>
           <div class="social-profiles">
             <a href="https://www.facebook.com/profile.php?id=100007290316768"><i class="fa fa-facebook"></a></li></i>
             <a href="https://github.com/Arnab11917676"><i class="fa fa-github"></a></li></i>
@@ -248,7 +239,7 @@
     </section>
     <!-- Testimonials -->
     <section class="testimonials" data-aos="fade-right">
-      <h1 class="testimonials-h1">What our clients says</h1>
+      <h1 class="testimonials-h1">What our clients say</h1>
       <p class="testimonials-p">
         
       </p>
